2007-09-23 [paul]	3.0.1cvs25

	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_quote.c
	* src/quote_fmt.c
	* src/quote_fmt.h
		remove unnecessary frame from Templates options
		and improve the English of the check button label

2007-09-22 [colin]	3.0.1cvs24

	* src/gtk/quicksearch.c
		Fix bug 1329, 'error in quicksearch.c'
		Fix return with value in function returning void

2007-09-22 [colin]	3.0.1cvs23

	* src/imap.c
	* src/procmsg.h
	* src/common/utils.c
	* src/common/utils.h
	* src/etpan/imap-thread.c
		Optimise fetching IMAP cached emails *a lot*
		(remember whether mail is fully cached and \r's
		 are already stripped)

2007-09-22 [colin]	3.0.1cvs22

	* src/folder.c
	* src/folder.h
	* src/prefs_folder_item.c
		Add a button to allow users to drop local caches.

2007-09-21 [colin]	3.0.1cvs21

	* src/summaryview.c
		Remove unnecessary error when cancelling export to mbox.
		Patch by Pawel

2007-09-21 [paul]	3.0.1cvs20

	* src/gtk/prefswindow.c
		remove unnecessary frames from the prefs
		pages. Patch by Pawel Pekala

2007-09-21 [paul]	3.0.1cvs19

	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_quote.c
	* src/quote_fmt.c
		put the Templates options into a tabbed
		layout. Patch by Pawel Pekala

2007-09-21 [paul]	3.0.1cvs18

	* src/mainwindow.c
		group together the character set menu items
		move the /View/Show or hide/Message view below
		.../Toolbar menu item
		Patch by Pawel Pekala

2007-09-21 [mones]	3.0.1cvs17

	* src/compose.c
		Fix for bug 1327, 'segfault when replying to a non-existent
		news message', thanks to Colin.

2007-09-21 [colin]	3.0.1cvs16

	* src/folderview.c
		Complete 3.0.1cvs15

2007-09-20 [colin]	3.0.1cvs15

	* src/folderview.c
	* src/folderview.h
		Maybe fix bug 1324, 'Corrupted IMAP cache'

2007-09-20 [colin]	3.0.1cvs14

	* src/printing.c
		Fix a little leak

2007-09-20 [holger]	3.0.1cvs13

	* src/printing.c
		Add page layout to print preview.
		Make the close-button in the toolbar
		right-aligned.
