@@ -728,75 +728,81 @@ static GtkItemFactoryEntry compose_entries[] =
 	 ENC_ACTION(C_UTF_8)},
 	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
 
-	{N_("/_Options/Character _encoding/Western European (ISO-8859-_1)"),
+	{N_("/_Options/Character _encoding/Western European"), NULL, NULL, 0, "<Branch>"},
+	{N_("/_Options/Character _encoding/Western European/ISO-8859-_1"),
 	 ENC_ACTION(C_ISO_8859_1)},
-	{N_("/_Options/Character _encoding/Western European (ISO-8859-15)"),
+	{N_("/_Options/Character _encoding/Western European/ISO-8859-15"),
 	 ENC_ACTION(C_ISO_8859_15)},
-	{N_("/_Options/Character _encoding/Western European (Windows-1252)"),
+	{N_("/_Options/Character _encoding/Western European/Windows-1252"),
 	 ENC_ACTION(C_WINDOWS_1252)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
 
 	{N_("/_Options/Character _encoding/Central European (ISO-8859-_2)"),
 	 ENC_ACTION(C_ISO_8859_2)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
 
-	{N_("/_Options/Character _encoding/_Baltic (ISO-8859-13)"),
+	{N_("/_Options/Character _encoding/Baltic"), NULL, NULL, 0, "<Branch>"},
+	{N_("/_Options/Character _encoding/Baltic/ISO-8859-13"),
 	 ENC_ACTION(C_ISO_8859_13)},
-	{N_("/_Options/Character _encoding/Baltic (ISO-8859-_4)"),
+	{N_("/_Options/Character _encoding/Baltic/ISO-8859-_4"),
 	 ENC_ACTION(C_ISO_8859_4)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
 
 	{N_("/_Options/Character _encoding/Greek (ISO-8859-_7)"),
 	 ENC_ACTION(C_ISO_8859_7)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
 
-	{N_("/_Options/Character _encoding/Hebrew (ISO-8859-_8)"),
+	{N_("/_Options/Character _encoding/Hebrew"), NULL, NULL, 0, "<Branch>"},
+	{N_("/_Options/Character _encoding/Hebrew/ISO-8859-_8"),
 	 ENC_ACTION(C_ISO_8859_8)},
-	{N_("/_Options/Character _encoding/Hebrew (Windows-1255)"),
+	{N_("/_Options/Character _encoding/Hebrew/Windows-1255"),
 	 ENC_ACTION(C_WINDOWS_1255)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
 
-	{N_("/_Options/Character _encoding/Arabic (ISO-8859-_6)"),
+	{N_("/_Options/Character _encoding/Arabic"), NULL, NULL, 0, "<Branch>"},
+	{N_("/_Options/Character _encoding/Arabic/ISO-8859-_6"),
 	 ENC_ACTION(C_ISO_8859_6)},
-	{N_("/_Options/Character _encoding/Arabic (Windows-1256)"),
+	{N_("/_Options/Character _encoding/Arabic/Windows-1256"),
 	 ENC_ACTION(C_CP1256)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
 
 	{N_("/_Options/Character _encoding/Turkish (ISO-8859-_9)"),
 	 ENC_ACTION(C_ISO_8859_9)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
 
-	{N_("/_Options/Character _encoding/Cyrillic (ISO-8859-_5)"),
+	{N_("/_Options/Character _encoding/Cyrillic"), NULL, NULL, 0, "<Branch>"},
+	{N_("/_Options/Character _encoding/Cyrillic/ISO-8859-_5"),
 	 ENC_ACTION(C_ISO_8859_5)},
-	{N_("/_Options/Character _encoding/Cyrillic (KOI8-_R)"),
+	{N_("/_Options/Character _encoding/Cyrillic/KOI8-_R"),
 	 ENC_ACTION(C_KOI8_R)},
-	{N_("/_Options/Character _encoding/Cyrillic (KOI8-U)"),
+	{N_("/_Options/Character _encoding/Cyrillic/KOI8-U"),
 	 ENC_ACTION(C_KOI8_U)},
-	{N_("/_Options/Character _encoding/Cyrillic (Windows-1251)"),
+	{N_("/_Options/Character _encoding/Cyrillic/Windows-1251"),
 	 ENC_ACTION(C_WINDOWS_1251)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
 
-	{N_("/_Options/Character _encoding/Japanese (ISO-2022-_JP)"),
+	{N_("/_Options/Character _encoding/Japanese"), NULL, NULL, 0, "<Branch>"},
+	{N_("/_Options/Character _encoding/Japanese/ISO-2022-_JP"),
 	 ENC_ACTION(C_ISO_2022_JP)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
+	{N_("/_Options/Character _encoding/Japanese/ISO-2022-JP-2"),
+	 ENC_ACTION(C_ISO_2022_JP_2)},
+	{N_("/_Options/Character _encoding/Japanese/_EUC-JP"),
+	 ENC_ACTION(C_EUC_JP)},
+	{N_("/_Options/Character _encoding/Japanese/_Shift__JIS"),
+	 ENC_ACTION(C_SHIFT_JIS)},
 
-	{N_("/_Options/Character _encoding/Simplified Chinese (_GB2312)"),
+	{N_("/_Options/Character _encoding/Chinese"), NULL, NULL, 0, "<Branch>"},
+	{N_("/_Options/Character _encoding/Chinese/Simplified (_GB2312)"),
 	 ENC_ACTION(C_GB2312)},
-	{N_("/_Options/Character _encoding/Simplified Chinese (GBK)"),
+	{N_("/_Options/Character _encoding/Chinese/Simplified (GBK)"),
 	 ENC_ACTION(C_GBK)},
-	{N_("/_Options/Character _encoding/Traditional Chinese (_Big5)"),
+	{N_("/_Options/Character _encoding/Chinese/Traditional (_Big5)"),
 	 ENC_ACTION(C_BIG5)},
-	{N_("/_Options/Character _encoding/Traditional Chinese (EUC-_TW)"),
+	{N_("/_Options/Character _encoding/Chinese/Traditional (EUC-_TW)"),
 	 ENC_ACTION(C_EUC_TW)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
 
-	{N_("/_Options/Character _encoding/Korean (EUC-_KR)"),
+	{N_("/_Options/Character _encoding/Korean"), NULL, NULL, 0, "<Branch>"},
+	{N_("/_Options/Character _encoding/Korean/EUC-_KR"),
 	 ENC_ACTION(C_EUC_KR)},
-	{N_("/_Options/Character _encoding/---"), NULL, NULL, 0, "<Separator>"},
+	{N_("/_Options/Character _encoding/Korean/ISO-2022-KR"),
+	 ENC_ACTION(C_ISO_2022_KR)},
 
-	{N_("/_Options/Character _encoding/Thai (TIS-620)"),
+	{N_("/_Options/Character _encoding/Thai"), NULL, NULL, 0, "<Branch>"},
+	{N_("/_Options/Character _encoding/Thai/TIS-620"),
 	 ENC_ACTION(C_TIS_620)},
-	{N_("/_Options/Character _encoding/Thai (Windows-874)"),
+	{N_("/_Options/Character _encoding/Thai/Windows-874"),
 	 ENC_ACTION(C_WINDOWS_874)},
 
 	{N_("/_Tools"),			NULL, NULL, 0, "<Branch>"},
